--- a/doc/usman/usman.tex
+++ b/doc/usman/usman.tex
@@ -206,6 +206,9 @@
 \include{ch-ana-sim}
 \cleardoublepage
 
+\include{ch-neddoc}
+\cleardoublepage
+
 \include{ch-parallel-exec}
 \cleardoublepage
 
