--- a/src/plove-old/ChangeLog
+++ b/src/plove-old/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-30 Andras Varga
+
+	* Makefile.in: fixed bug which prevented plove from getting 
+	command-line arguments ($* didn't make it to the wrapper script)
+
 2003-06-16  ------ omnetpp-2.3 released ------
 
 2003-03-15  ------ omnetpp-2.3b2 released ------
