undo/redo feature in text editor

--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,4 +1,9 @@
 
+2003-09-01  Andras Varga
+
+	* canvas.tcl, widgets.tcl: turned on Undo/Redo feature in editor
+	(also added to Edit menu)
+
 2003-08-12  Andras Varga
 
 	* combobox.tcl: on FocusOut event, it always restored the old content
