--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-22  Andras Varga
+
+	* omnetapp.cc, cenvir.cc: messageSent() signature change, see
+	include/ChangeLog
+
 2003-06-16  ------ omnetpp-2.3 released ------
 
 2003-03-15  ------ omnetpp-2.3b2 released ------
