--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-22  Andras Varga
+
+	* cmodule.cc: sendDirect() rules slightly modified, see header file.
+
 2003-06-16  ------ omnetpp-2.3 released ------
 
 2003-06-16  Andras Varga
