--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-02  Andras Varga
+
+	* util.h: added implementation of cContextSwitcher internal class, 
+	needed by the new Enter_Method() and Enter_Method_Silent() macros.
+
 2003-09-22  Andras Varga
 
 	* cmodule.cc: sendDirect() rules slightly modified, see header file.
