--- a/doc/src/manual/ch-run-sim.tex
+++ b/doc/src/manual/ch-run-sim.tex
@@ -1390,7 +1390,7 @@ You need to add the following to \ttt{omnetpp.ini}:
 
 \begin{verbatim}
 [General]
-outputvectormanager-class="AkOutputVectorManager"
+outputvectormanager-class="cAkOutputVectorManager"
 \end{verbatim}
 
 The above line replaces the normal output vector handler
